--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Cerner Blog</title>
+    <title>Dev Blog</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
